# muxdex

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-01-muxdex-v1.md
docs/superpowers/specs/: 2026-05-01-muxdex-design.md
src/: app.rs  layout.rs  lib.rs  main.rs  store.rs  tmux.rs  ui.rs
