[package]
name = "muxdex"
version = "0.1.0"
edition = "2024"
description = "Read-only terminal dashboard for monitoring tmux sessions."
repository = "https://github.com/accnops/muxdex"
homepage = "https://github.com/accnops/muxdex"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
ansi-to-tui = "8.0.1"
crossterm = "0.29.0"
ratatui = "0.30.0"
unicode-width = "0.2.2"
